fix: updgrade gradle, spring boot 3, format